# BOSSINPUT

./: .editorconfig  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: PRD.md  frontend-design.md  progress.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: audio.rs  clipboard.rs  hotkey.rs  keyboard.rs  lib.rs  main.rs  stt.rs
src/components/: Button.tsx  ErrorBoundary.tsx  Key.tsx  KeyPicker.tsx  Modal.tsx  Onboarding.tsx  RecordingFloat.tsx  Sidebar.tsx  StatusBar.tsx  ThemeToggle.tsx  Toast.tsx  index.ts
src/hooks/: index.ts  useGlobalHotkey.ts  useKeyboard.ts  useModel.ts  useVoice.ts
src/i18n/: hook.ts  index.ts
src/i18n/locales/: en.json  zh-CN.json
src/lib/: constants.ts  tauri.ts
src/pages/: Keyboard.tsx  Logs.tsx  Models.tsx  Voice.tsx  index.ts
src/stores/: appStore.ts  index.ts  keyboardStore.ts  modelStore.ts  uiStore.ts  voiceStore.ts
src/styles/: index.css
src/test/: setup.ts
src/test/hooks/: useKeyboard.test.ts  useModel.test.ts  useVoice.test.ts
src/types/: index.ts
